--- a/index.html
+++ b/index.html
@@ -255,21 +255,24 @@
             </div>
             <nav class="footer__column_content_social">
                 <h4 class="footer__column-heading">Соцсети</h4>
-                <ul class="footer__column-list">
-                    <li><a class="footer__column-link" href="https://www.facebook.com/yandex.practicum/"
-                           target="_blank"><img
-                            class="footer__social-icon"
-                            src="images/facebook_white.svg"
-                            alt="facebook">Facebook</a></li>
-                    <li><a class="footer__column-link" href="https://vk.com/yandex.practicum" target="_blank"><img
-                            class="footer__social-icon"
-                            src="images/vk_white.svg"
-                            alt="VK">ВКонтакте</a></li>
-                    <li><a class="footer__column-link" href="https://www.instagram.com/yndx.practicum/" target="_blank"><img
-                            class="footer__social-icon"
-                            src="images/instagram_white.svg" alt="Instagram">Instagram</a>
-                    </li>
-                </ul>
+                <div class="footer__column-links">
+                    <ul class="footer__column-list">
+                        <li><a class="footer__column-link" href="https://www.facebook.com/yandex.practicum/"
+                               target="_blank"><img
+                                class="footer__social-icon"
+                                src="images/facebook_white.svg"
+                                alt="facebook">Facebook</a></li>
+                        <li><a class="footer__column-link" href="https://vk.com/yandex.practicum" target="_blank"><img
+                                class="footer__social-icon"
+                                src="images/vk_white.svg"
+                                alt="VK">ВКонтакте</a></li>
+                        <li><a class="footer__column-link" href="https://www.instagram.com/yndx.practicum/"
+                               target="_blank"><img
+                                class="footer__social-icon"
+                                src="images/instagram_white.svg" alt="Instagram">Instagram</a>
+                        </li>
+                    </ul>
+                </div>
             </nav>
         </div>
     </footer>
