add: loading images from JSON by clicking button

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
+<!--    <link rel="script" href="scripts/index.js">-->
+
 </head>
 <body>
 <div class="page">
@@ -68,6 +70,10 @@
                     <h4 class="cards__title">Иллюзия компетентности</h4>
                     <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется,
                         что вы владеете новой темой.</p>
+                </li>
+
+                <li class="cards__item">
+                    <button class = "cards__button_load">Загрузить</button>
                 </li>
             </ul>
         </section>
@@ -276,6 +282,7 @@
             </nav>
         </div>
     </footer>
+    <script src="scripts/index.js"></script>
 </div>
 </body>
 </html>
